Implement search drink feature

--- a/Cocktailist/Cocktailist/UI/Storyboards/Base.lproj/Main.storyboard
+++ b/Cocktailist/Cocktailist/UI/Storyboards/Base.lproj/Main.storyboard
@@ -25,18 +25,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="rUX-nX-j6B">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                            <searchBar contentMode="redraw" placeholder="Search for drink" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rUX-nX-j6B">
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.0"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="76k-lu-8OY"/>
+                                    <constraint firstAttribute="height" id="76k-lu-8OY"/>
                                 </constraints>
-                                <textInputTraits key="textInputTraits"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="barTintColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="name"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="delegate" destination="01J-lp-oVM" id="gqF-aC-qfW"/>
                                 </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CgY-xY-Snd">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="595"/>
                                 <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cocktailCell" rowHeight="120" id="YGo-1T-oBd" customClass="CocktailTableViewCell" customModule="Cocktailist" customModuleProvider="target">
@@ -134,10 +145,10 @@
                                 </connections>
                             </tableView>
                             <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1A5-X2-CNJ">
-                                <rect key="frame" x="-0.5" y="120" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="xda-oE-RAe">
-                                        <rect key="frame" x="169.5" y="255" width="37" height="37"/>
+                                        <rect key="frame" x="169.5" y="283" width="37" height="37"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,16 +158,16 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.32549019610000002" green="0.73725490199999999" blue="0.81568627449999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="1A5-X2-CNJ" firstAttribute="height" secondItem="CgY-xY-Snd" secondAttribute="height" id="AFT-Gr-zpi"/>
-                            <constraint firstItem="1A5-X2-CNJ" firstAttribute="centerY" secondItem="CgY-xY-Snd" secondAttribute="centerY" id="CZs-1c-FEN"/>
+                            <constraint firstItem="1A5-X2-CNJ" firstAttribute="top" secondItem="rUX-nX-j6B" secondAttribute="bottom" id="4Lc-XW-pDJ"/>
                             <constraint firstItem="CgY-xY-Snd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ClG-n7-9Sw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CgY-xY-Snd" secondAttribute="bottom" id="GF7-hJ-Vp8"/>
                             <constraint firstItem="rUX-nX-j6B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IJN-Ha-Vn6"/>
                             <constraint firstItem="1A5-X2-CNJ" firstAttribute="centerX" secondItem="CgY-xY-Snd" secondAttribute="centerX" id="KN1-50-I5B"/>
-                            <constraint firstItem="CgY-xY-Snd" firstAttribute="top" secondItem="rUX-nX-j6B" secondAttribute="bottom" id="UOd-Jf-v06"/>
+                            <constraint firstItem="CgY-xY-Snd" firstAttribute="top" secondItem="rUX-nX-j6B" secondAttribute="bottom" constant="8" id="UOd-Jf-v06"/>
+                            <constraint firstItem="1A5-X2-CNJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="X9e-fz-4oi"/>
                             <constraint firstItem="1A5-X2-CNJ" firstAttribute="width" secondItem="CgY-xY-Snd" secondAttribute="width" id="aMY-kK-7xV"/>
                             <constraint firstItem="rUX-nX-j6B" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="jfo-cL-COG"/>
                             <constraint firstItem="rUX-nX-j6B" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="mm7-4H-3Fh"/>
@@ -174,6 +185,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="cocktailTableView" destination="CgY-xY-Snd" id="RZ2-49-d4V"/>
+                        <outlet property="drinkSearchBar" destination="rUX-nX-j6B" id="V0E-Vt-Vvg"/>
                         <outlet property="filterBarButton" destination="fEw-Ho-ytj" id="QC4-u9-ohC"/>
                         <outlet property="initLoadView" destination="1A5-X2-CNJ" id="Qng-Mo-tNE"/>
                         <outlet property="searchBarHeightConstraint" destination="76k-lu-8OY" id="mVn-XJ-mzL"/>
